# FoundFrame

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
dictionaries/: README.md
dictionaries/bundles/: v1-initial.yaml
dictionaries/fixtures/: minimal-roll-dictionary.yaml
dictionaries/schemas/: dictionary-entry.schema.yaml
dictionaries/taxonomy/: categories.yaml  compatibilities.yaml  tags.yaml
docs/: README.md  project-overview.md  spec-review.md
scripts/: README.md
src/: App.css  App.tsx  i18n.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: README.md  lib.rs  main.rs
src-tauri/src/application/: alternate_take.rs  bootstrap.rs  contact_sheet.rs  failure_tracking.rs  mod.rs  rolls.rs
src-tauri/src/commands/: system.rs
src-tauri/src/domain/: mod.rs  roll_dna.rs
src-tauri/src/dto/: dictionary.rs  frame.rs  mod.rs  roll.rs  setup.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/filesystem/: mod.rs  placeholders.rs  storage.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/persistence/: database.rs  dictionary_repository.rs  favorites_repository.rs  frame_repository.rs  generation_job_repository.rs  migrations.rs  mod.rs  presets_repository.rs  provider_health_repository.rs  review_repository.rs  roll_repository.rs
src-tauri/src/prompt_engine/: mod.rs
src-tauri/src/providers/: mod.rs  openai.rs
src-tauri/src/review/: mod.rs  rule_based.rs
src-tauri/src/services/: dictionary_loader.rs  mod.rs  setup_resolver.rs
tests/: README.md  dictionaryAudit.test.ts
(+47 files in other folders)
